--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="9">
     <tr>
-      <td><img src="circle-cropped.png" alt="Ramzi's Profile Picture"></td>
+      <td><img src="Images/circle-cropped.png" alt="Ramzi's Profile Picture"></td>
       <td>
         <h1> Ramseenamol C A</h1>
         <p><em><strong>Application Support Engineer in <a href="https://www.dxc.technology/">DXC Technologies</a></strong></em></p>
