--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </table>
 
   <hr size="3" noshade/>
-  <h4><a href="hobbies.html">My Hobbies</a></h4>
+  <h4><a href="hobbies.html" target="_blank">My Hobbies</a></h4>
   <h4><a href="contact-me.html" target="_blank">Contact Me</a></h4>
 
 </body>
